// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should render the Progress 1`] = `
<div
  className="nice-progress primary"
  style={Object {}}
>
  <div
    className="nice-progress-fill"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`<Progress /> should render the Progress with context 1`] = `
<div
  className="nice-progress good"
  style={Object {}}
>
  <div
    className="nice-progress-fill"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`<Progress /> should render the Progress with custom className/style 1`] = `
<div
  className="nice-progress primary my-custom-class"
  style={
    Object {
      "top": 0,
    }
  }
>
  <div
    className="nice-progress-fill"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    0%
  </div>
</div>
`;

exports[`<Progress /> should render the Progress with custom message 1`] = `
<div
  className="nice-progress primary"
  style={Object {}}
>
  <div
    className="nice-progress-fill"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    Loading...
  </div>
</div>
`;

exports[`<Progress /> should render the Progress with custom message and context 1`] = `
<div
  className="nice-progress bad"
  style={Object {}}
>
  <div
    className="nice-progress-fill"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    Loading...
  </div>
</div>
`;
